<?xml version="1.0" encoding="utf-8"?>

<resources>
	<string name="hello">Choose one of the features below.</string>

	<string name="app_name">AdvertiseMe</string>
	<string name="description_logo">Demo</string>

	<string name="description_about">About</string>
	<string name="description_home">Home</string>
	<string name="description_search">Search</string>
	<string name="description_feature1">Feature 1</string>
	<string name="description_feature2">Feature 2</string>
	<string name="description_feature3">Feature 3</string>
	<string name="description_feature4">Feature 4</string>
	<string name="description_feature5">Feature 5</string>
	<string name="description_feature6">Feature 6</string>

	<string name="title_about">About</string>
	<string name="title_home">Home</string>
	<string name="title_search">Search</string>
	<string name="title_feature1">My AdvertiseMe</string>
	<string name="title_feature2">Browse</string>
	<string name="title_feature3">Messages</string>
	<string name="title_feature4">Nearby</string>
	<string name="title_feature5">Favorite Sellers</string>
	<string name="title_feature6">Deals</string>
	<string name="title_feature7">My Profile</string>
	<string name="title_feature8">Settings</string>
	
	
	<string name="title_category">Category</string>
	<string name="title_dealbycategory">Deals by Category</string>
	<string name="title_advertlist">Search Result</string>
	<string name="title_wishlist">Wish List</string>
	<string name="title_activelist">Active List</string>
	<string name="title_offer">Offers</string>
	<string name="title_activelisting">Active Listing</string>
	<string name="title_bestoffer">Best Offers</string>
	<string name="title_expired">Expired</string>
	<string name="title_scheduled">Scheduled</string>
	<string name="title_inbox">Inbox</string>
	<string name="title_sent">Sent</string>
	<string name="title_saved">Saved messages</string>
	<string name="title_recommendation">Your Recommendations</string>
	<string name="title_savedsearch">Saved Searches</string>
	<string name="title_findpeople">Find People</string>
	<string name="title_mycontact">My Contacts</string>
	<string name="title_contactrequest">Contact Requests</string>
	<string name="title_updatevalue">Update Value</string>
	<string name="title_message">Read message</string>
	<string name="title_compose">New Message</string>
	<string name="title_addpeoeple">Add recipient</string>
	<string name="title_advertisement">Advertisement</string>
	<string name="title_resource">Resources</string>
	<string name="title_detail">Product Detail</string>
	<string name="title_review">Customer Review</string>
	<string name="title_seller">Seller Detail</string>
	<string name="title_feedback">Feedback</string>
	<string name="title_todaydeal">Today\'s Deal</string>
	<string name="title_dealdetail">Deal Information</string>
	<string name="title_userprofile">User Profile</string>
	<string name="title_webpage">Web Browser</string>
	<string name="title_views">User Views</string>
		<string name="title_activity">User Activities</string>
		<string name="title_buyer_offer">Buyer Offer</string>
		
	<string name="title_locationdispaly">Near by locations</string>
	<string name="title_distancemanager">Adjust radius</string>
	
	<string name="default_intro">This is the default content view for an activity.
		Be sure to change your activity\'s onCreate method. Use setContentView
		on a custom layout.</string>
	<string name="feature1_intro">Feature 1 content goes here.</string>
	<string name="feature2_intro">Feature 2 content goes here.</string>
	<string name="feature3_intro">Feature 3 content goes here.</string>
	<string name="feature4_intro">Feature 4 content goes here.</string>
	<string name="feature5_intro">Feature 5 content goes here.</string>
	<string name="feature6_intro">Feature 6 content goes here.</string>

	<string name="about_intro">This app is a demo to show you how to do an Android
		app based on the Dashboard pattern that has been used in apps like
		Twitter, Google IO, and Evernote. Visit our website for more information</string>
	<string name="search_intro">Content for the Search page goes here.</string>
	<string name="loc">Location &amp; timezone</string>

<string name="message">
Hello,\n
Please be kind enough to fill this survey and submit\n

http://www.esurveycreator.com/live.php?code=2b0ed3f\n

Thank you,\n
Dinusha</string>
<string name="doublequote">"</string>
</resources>
