<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="#ffffff">
	<LinearLayout style="@style/TitleBar">
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_home" android:src="@drawable/title_home"
			android:onClick="onClickHome" />

		<ImageView style="@style/TitleBarSeparator" />
		<TextView style="@style/TitleBarText" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_about" android:src="@drawable/title_about"
			android:onClick="onClickAbout" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_search" android:src="@drawable/title_search"
			android:onClick="onClickSearch" />
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical" android:paddingBottom="100dip"></LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent" android:layout_height="match_parent"
		android:orientation="vertical" >
		
		<com.advertiseme.resource.HorizontalListView android:gravity="center_vertical"
			android:id="@+id/listview" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="#ffffff" />
			
			
	</LinearLayout>

</LinearLayout>
