<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Wglxy.com Licensed under the Apache License, Version 
	2.0 (the "License"); you may not use this file except in compliance with 
	the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/white">
	<LinearLayout style="@style/TitleBar">
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_home" android:src="@drawable/title_home"
			android:onClick="onClickHome" />

		<ImageView style="@style/TitleBarSeparator" />
		<TextView style="@style/TitleBarText" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_about" android:src="@drawable/title_about"
			android:onClick="onClickAbout" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_search" android:src="@drawable/title_search"
			android:onClick="onClickSearch" />
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:background="@color/back_gray">
		<TextView android:layout_margin="10dip" android:paddingLeft="10dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="You have 2 items in the scheduled list"
			android:layout_marginRight="5dip" android:textColor="@color/white"
			android:textSize="18sp" android:id="@+id/txtScheduledListCount"/>
		<View android:id="@+id/divider" android:background="@drawable/gradient_bg"
			android:layout_width="fill_parent" android:layout_height="0.5dp"
			android:layout_margin="5dip" />
		<TextView android:layout_margin="5dip" android:paddingLeft="10dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="Tap and hold for options"
			android:layout_marginRight="5dip" android:textColor="@color/white"
			android:textSize="12sp" android:layout_gravity="right" />
		<View android:id="@+id/divider" android:background="@drawable/gradient_bg"
			android:layout_width="fill_parent" android:layout_height="6dp" />

	</LinearLayout>
	
	<ListView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/lvScheduledList"/>
</LinearLayout>
