<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2011 Wglxy.com

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>
<LinearLayout 
        android:orientation="vertical" 
        android:gravity="center_horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:background="#ffffffff">
    	<com.advertiseme.support.ViewPagerIndicator 
    		android:id="@+id/indicator"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:background="#696969"
    		android:paddingLeft="5dp"
    		android:paddingRight="5dp" />
    	<RelativeLayout 
    		android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="#696969" > 
	    	<View 
	    		android:layout_width="fill_parent"
	    		android:layout_height="5px"
	    		android:layout_alignBottom="@+id/current"
	    		android:background="#696969"
	    		android:layout_marginTop="5dip" 
	    		/>
    		<ImageView 
    			android:id="@id/current"
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:src="@drawable/img_indicator_crnt"
	    		android:layout_centerInParent="true"
	    		android:layout_alignParentTop="true" />
	    			<View android:id="@+id/divider" android:layout_alignBottom="@id/current" android:background="#00bfff"
			android:layout_width="fill_parent" android:layout_height="3dp"
			android:longClickable="true" />
    	</RelativeLayout>
    <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" />
</LinearLayout>
</LinearLayout>
