<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2011 Wglxy.com Licensed under the Apache License, Version 
	2.0 (the "License"); you may not use this file except in compliance with 
	the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/white">
	<LinearLayout style="@style/TitleBar">
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_home" android:src="@drawable/title_home"
			android:onClick="onClickHome" />

		<ImageView style="@style/TitleBarSeparator" />
		<TextView style="@style/TitleBarText" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_about" android:src="@drawable/title_about"
			android:onClick="onClickAbout" />
		<ImageButton style="@style/TitleBarAction"
			android:contentDescription="@string/description_search" android:src="@drawable/title_search"
			android:onClick="onClickSearch" />
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:background="@color/back_gray" android:paddingTop="5dip" android:paddingBottom="5dip">


		<TextView style="@style/TitleBarText" android:layout_margin="5dip"
			android:id="@+id/txtFavoriteSellerCount" android:text="New Message"
			android:layout_gravity="center" android:textColor="@color/white" />
		<ImageButton  android:layout_width="50dip"
		android:layout_height="50dip" 
			android:layout_marginRight="10dip" android:layout_gravity="right"
			android:onClick="onClickSend" android:src="@drawable/selecter_btn_send" android:id="@+id/btnSend"/>
	</LinearLayout>
	<View android:id="@+id/divider" android:background="@drawable/gradient_bg"
		android:layout_width="fill_parent" android:layout_height="6dp" />

	<RelativeLayout android:layout_width="wrap_content"
		android:layout_margin="5dip" android:layout_height="match_parent"
		android:layout_centerHorizontal="true">
		<LinearLayout android:layout_width="match_parent"
			android:id="@+id/lnReciever" android:layout_height="wrap_content"
			android:orientation="horizontal" android:gravity="right">

			<EditText android:layout_width="match_parent" android:paddingLeft="10dip"
				android:layout_margin="5dip" android:layout_weight="0.7" android:singleLine="false" 
				android:layout_height="match_parent" android:id="@+id/txtReciever"
				android:background="@drawable/rounded_corner_bg" android:editable="false">
				<requestFocus></requestFocus>
			</EditText>
			<ImageButton android:layout_width="wrap_content"
				android:layout_toRightOf="@+id/txtReciever"
				android:layout_alignParentRight="true" android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:src="@drawable/btn_add_people" android:id="@+id/btnAddReciever" android:onClick="onClickAdd"/>
		</LinearLayout>

 
		<EditText android:layout_width="match_parent"  android:singleLine="false" android:maxLines="3"
			android:layout_marginTop="5dip" android:layout_height="wrap_content"
			android:id="@+id/txtHeading" android:layout_below="@+id/lnReciever" android:hint="Message title"></EditText>
		<EditText android:layout_width="match_parent" android:gravity="top"
			android:layout_marginTop="10dip" android:layout_height="match_parent" android:singleLine="false"
			android:layout_below="@+id/txtHeading" android:id="@+id/txtContent"  android:hint="Type your message here"></EditText>

	</RelativeLayout>

</LinearLayout>
